SO-61: Fix Calendar top margin on mobile

--- a/src/modules/views/dashboard/classes/Calendar.module.css
+++ b/src/modules/views/dashboard/classes/Calendar.module.css
@@ -1,9 +1,3 @@
 .calendar-container {
   padding: 1rem;
 }
-
-@media only screen and (max-width: 1000px) {
-  .calendar-container {
-    margin-top: 2rem;
-  }
-}
